separating js files
new js files for each page, minor edits

--- a/benefits.html
+++ b/benefits.html
@@ -100,5 +100,5 @@
     </footer>
   </body>
 
-  <script src="./js/scripts.js"></script>
+  <script src="./js/benefits-scripts.js"></script>
   </html>
