--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <hr>
         <section class="subsection"><!--Getting in touch-->
             <div><p class="item-type">Getting in touch</p></div>
-            <div> <h3>I'm always happy to hear from potential collaborators / research students, or from people who are interested in my research.</h3>
+            <div> <h3>I&rsquo;m always happy to hear from potential collaborators / research students, or from people who are interested in my research.</h3>
                     <p>You can <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#98;&#101;&#110;&#103;&#101;&#105;&#103;&#101;&#114;&#64;&#107;&#99;&#108;&#46;&#97;&#99;&#46;&#117;&#107;">email me</a>, or get in touch via <a href="https://inequalitiesblog.wordpress.com/">Inequalities</a></p></div>
         </section>
 
@@ -89,7 +89,7 @@
         <div><a class="footer-link"href="./index.html">Contact</a></div>
     </footer>
 
-    <script src="./js/scripts.js"></script>
+    <script src="./js/index-scripts.js"></script>
   </body>
   </html>
         
