--- a/latest.html
+++ b/latest.html
@@ -77,6 +77,6 @@
         <div><a class="footer-link"href="./index.html">Contact</a></div>
     </footer>
 
-    <script src="./js/scripts.js"></script>
+    <script src="./js/latest-scripts.js"></script>
   </body>
   </html>
