--- a/publications.html
+++ b/publications.html
@@ -898,6 +898,6 @@
         <div><a class="footer-link"href="./index.html">Contact</a></div>
     </footer>
 
-    <script src="./js/scripts.js"></script>
+    <script src="./js/publications-scripts.js"></script>
   </body>
   </html>
