--- a/socialScience.html
+++ b/socialScience.html
@@ -65,5 +65,5 @@
     </footer>
   </body>
 
-  <script src="./js/scripts.js"></script>
+  <script src="./js/social-science-scripts.js"></script>
   </html>
