--- a/unpublished.html
+++ b/unpublished.html
@@ -69,5 +69,5 @@
     </footer>
   </body>
 
-  <script src="./js/scripts.js"></script>
+  <script src="./js/unpublished-scripts.js"></script>
   </html>
