--- a/disability.html
+++ b/disability.html
@@ -115,6 +115,6 @@
         <div><a class="footer-link"href="./index.html">Contact</a></div>
     </footer>
 
-    <script src="./js/scripts.js"></script>
+    <script src="./js/disability-scripts.js"></script>
   </body>
   </html>
