--- a/unpublished.html
+++ b/unpublished.html
@@ -51,7 +51,62 @@
                 <!-- papers -->
                 <div class="publication benefits"> <!-- paper one -->
                     <div><p class="item-type paper">Paper</p></div>
+                    <div><p class="title-link" href=""><strong></strong> (Geiger)</p>
+                        <p>This was rejected after review by <em>American Sociological Review</em>, and is currently being split into two papers to be re-submitted to journals in 2021.</p>
+                    </div>
+                    <p>unpublished</p>
+                </div>
+                <div class="publication benefits"> <!-- paper two -->
+                    <div><p class="item-type paper">Paper</p></div>
+                    <div><p class="title-link"><strong>Disabled but Not Deserving? The deservingness heuristic and the politics of disability welfare benefits</strong></a> (Geiger)</p>
+                    <p>This was rejected after review by <em>American Journal of Political Science</em>, before being accepted by <a href="https://journals.sagepub.com/doi/10.1177/0958928721996652"><em>Journal of European Social Policy</em></a></p>
+                    </div>
+                    <p>unpublished</p>
+                </div>
+                <div class="publication benefits"> <!-- paper three -->
+                    <div><p class="item-type paper">Paper</p></div>
+                    <div><p class="title-link" href=""><strong></strong></p>
+                        <p></p>
+                    </div>
+                    <p>unpublished</p>
+                </div>
+                <div class="publication benefits"> <!-- paper four -->
+                    <div><p class="item-type paper">Paper</p></div>
                     <div><p><a class="title-link" href=""><strong></strong></a> () <em></em></p>
+                    </div>
+                    <p>unpublished</p>
+                </div>
+                <div class="publication benefits"> <!-- paper five -->
+                    <div><p class="item-type paper">Paper</p></div>
+                    <div><p class="title-link" href=""><strong></strong></p>
+                        <p></p>
+                    </div>
+                    <p>unpublished</p>
+                </div>
+                <div class="publication benefits"> <!-- paper six -->
+                    <div><p class="item-type paper">Paper</p></div>
+                    <div><p class="title-link" href=""><strong></strong></p>
+                        <p></p>                    </div>
+                    <p>unpublished</p>
+                </div>
+                <div class="publication benefits"> <!-- paper seven -->
+                    <div><p class="item-type paper">Paper</p></div>
+                    <div><p class="title-link" href=""><strong></strong></p>
+                        <p></p>                    
+                    </div>
+                    <p>unpublished</p>
+                </div>
+                <div class="publication benefits"> <!-- paper eight -->
+                    <div><p class="item-type paper">Paper</p></div>
+                    <div><p class="title-link" href=""><strong></strong></p>
+                        <p></p>
+                </div>
+                    <p>unpublished</p>
+                </div>
+                <div class="publication benefits"> <!-- paper nine -->
+                    <div><p class="item-type paper">Paper</p></div>
+                    <div><p class="title-link" href=""><strong></strong></p>
+                        <p></p>                    
                     </div>
                     <p>unpublished</p>
                 </div>
