adding profile pic
intro section of index / about

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
                 <div><a class="nav-link" href="./benefits.html">Benefits</a></div>
                 <div><a class="nav-link" href="./socialScience.html">Social Science</a></div>
                 <div><a class="nav-link" href="./publications.html">Publications</a></div>
-                <div><p class="nav-link current">About</p></div>
+                <div><a class="nav-link current" href="./index.html">About</a></div>
             </nav>
 
         </header>
 
-        <section class="intro-section"> <!--intro-->
+        <section class="intro-section profile"> <!--intro-->
+            <div class="profile-image"></div>
             <div class="intro-container"><p class="intro-text">I am currently Professor of Social Health and Policy at King&rsquo;s College London.</h3>
                 <p class="intro-text">If you&rsquo;re interested in studying at King&rsquo;s at undergrad or postgrad level then look here; I'm also very happy to co-supervise research students on any of my research interests &mdash; send me an email if you want to explore this.</p>  
                 <p class="intro-text">I was previously a Reader in Sociology and Social Policy at the School of Social Policy, Sociology and Social Research at the University of Kent (2011&ndash;2022). Whilst there, I was also involved in the the University of Kent&rsquo;s Q-Step centre which I helped found and co-directed until September 2016.</p>
