--- a/latest.html
+++ b/latest.html
@@ -32,7 +32,7 @@
             </div>
         </div>
             <nav> <!--main nav / hamburger-->
-                    <div class="current">Latest</div>
+                    <div><a class="nav-link current"  href="./latest.html">Latest</a></div>
                     <div><a class="nav-link" href="./disability.html">Disability</a></div>
                     <div><a class="nav-link" href="./benefits.html">Benefits</a></div>
                     <div><a class="nav-link" href="./socialScience.html">Social Science</a></div>
