--- a/publications.html
+++ b/publications.html
@@ -36,7 +36,7 @@
             <div><a class="nav-link" href="./disability.html">Disability</a></div>
             <div><a class="nav-link" href="./benefits.html">Benefits</a></div>
             <div><a class="nav-link" href="./socialScience.html">Social Science</a></div>
-            <div><p class="current">Publications</p></div>
+            <div><a class="nav-link current" href="./publications.html">Publications</a></div>
             <div><a class="nav-link" href="./index.html">About</a></div>
 
         </nav>
