--- a/disability.html
+++ b/disability.html
@@ -34,7 +34,7 @@
         </div>
         <nav> <!--main nav / hamburger-->
             <div><a class="nav-link"  href="./latest.html">Latest</a></div>
-            <div><p class="current">Disability</p></div>
+            <div><a class="nav-link current" href="./disability.html">Disability</a></div>
             <div><a class="nav-link" href="./benefits.html">Benefits</a></div>
             <div><a class="nav-link" href="./socialScience.html">Social Science</a></div>
             <div><a class="nav-link" href="./publications.html">Publications</a></div>
