--- a/socialScience.html
+++ b/socialScience.html
@@ -36,7 +36,7 @@
             <div><a class="nav-link"  href="./latest.html">Latest</a></div>
             <div><a class="nav-link" href="./disability.html">Disability</a></div>
             <div><a class="nav-link" href="./benefits.html">Benefits</a></div>
-            <div><p class="current">Social Science</p></div>
+            <div><a class="nav-link current" href="./socialScience.html">Social Science</a></div>
             <div><a class="nav-link" href="./publications.html">Publications</a></div>
             <div><a class="nav-link" href="./index.html">About</a></div>
         </nav>
