--- a/unpublished.html
+++ b/unpublished.html
@@ -34,7 +34,7 @@
         <nav> <!--main nav / hamburger-->
             <div><a class="nav-link"  href="./latest.html">Latest</a></div>
             <div><a class="nav-link" href="./disability.html">Disability</a></div>
-            <div><p class="current">Benefits</p></div>
+            <div><a class="nav-link" href="./benefits.html">Benefits</a></div>
             <div><a class="nav-link" href="./socialScience.html">Social Science</a></div>
             <div><a class="nav-link" href="./publications.html">Publications</a></div>
             <div><a class="nav-link" href="./index.html">About</a></div>
