Adding unpublished records

--- a/unpublished.html
+++ b/unpublished.html
@@ -51,7 +51,7 @@
                 <!-- papers -->
                 <div class="publication benefits"> <!-- paper one -->
                     <div><p class="item-type paper">Paper</p></div>
-                    <div><p class="title-link" href=""><strong></strong> (Geiger)</p>
+                    <div><p class="title-link" href=""><strong>Suspicious Minds? Interpersonal contact, media frames, and the perceived deservingness of disability welfare benefit claimants </strong> (Geiger)</p>
                         <p>This was rejected after review by <em>American Sociological Review</em>, and is currently being split into two papers to be re-submitted to journals in 2021.</p>
                     </div>
                     <p>unpublished</p>
@@ -61,56 +61,75 @@
                     <div><p class="title-link"><strong>Disabled but Not Deserving? The deservingness heuristic and the politics of disability welfare benefits</strong></a> (Geiger)</p>
                     <p>This was rejected after review by <em>American Journal of Political Science</em>, before being accepted by <a href="https://journals.sagepub.com/doi/10.1177/0958928721996652"><em>Journal of European Social Policy</em></a></p>
                     </div>
-                    <p>unpublished</p>
+                    <time  class="date" date-time="2021" >2021</time>
                 </div>
                 <div class="publication benefits"> <!-- paper three -->
                     <div><p class="item-type paper">Paper</p></div>
-                    <div><p class="title-link" href=""><strong></strong></p>
-                        <p></p>
+                    <div><p class="title-link" href=""><strong>Has working-age morbidity been declining? Trends in general health, chronic diseases, symptoms and biomarkers in England 1994&ndash;2014</strong> (Geiger)</p>
+                        <p>This was desk rejected by both <em>Demography</em> and <em>Social Science & Medicine</em> (for being descriptive rather than theoretical) before being accepted by <a href="http://dx.doi.org/10.1136/bmjopen-2019-032378"><em>BMJ Open</em></a></p>
                     </div>
-                    <p>unpublished</p>
+                    <time  class="date" date-time="2020" >2020</time>
                 </div>
                 <div class="publication benefits"> <!-- paper four -->
                     <div><p class="item-type paper">Paper</p></div>
-                    <div><p><a class="title-link" href=""><strong></strong></a> () <em></em></p>
+                    <div><p><a class="title-link" href=""><strong>Benefit &lsquo;Myths&rsquo;? The Accuracy and Inaccuracy of Public Beliefs about the Benefits System</strong></a> (Baumberg)</p>
+                        <p>This was desk rejected by the <em>British Journal of Political Science</em> before being accepted by <a href="http://dx.doi.org/10.1111/spol.12347"><em>Social Policy & Administration 2017</em></a></p>
                     </div>
-                    <p>unpublished</p>
+                    <time  class="date" date-time="2018" >2018</time>
                 </div>
                 <div class="publication benefits"> <!-- paper five -->
                     <div><p class="item-type paper">Paper</p></div>
-                    <div><p class="title-link" href=""><strong></strong></p>
-                        <p></p>
+                    <div><p class="title-link" href=""><strong>Can alcohol (policies) make you happy? A critique of the consumer surplus approach, and an empirical alternative</strong> (Geiger & Mackerron)</p>
+                        <p>Rejected by <em>Addiction</em> (after R&R, <time  class="date" date-time="2015" >2015</time>) &mdash; for reasons that I really didn&rsquo;t agree with &mdash; before being published by <a href="http://dx.doi.org/10.1016/j.socscimed.2016.03.034"><em>Social Science & Medicine</em></a></p>
                     </div>
-                    <p>unpublished</p>
+                    <time  class="date" date-time="20216" >2016</time>
                 </div>
                 <div class="publication benefits"> <!-- paper six -->
                     <div><p class="item-type paper">Paper</p></div>
-                    <div><p class="title-link" href=""><strong></strong></p>
-                        <p></p>                    </div>
-                    <p>unpublished</p>
+                    <div><p class="title-link" href=""><strong>Does the alcohol industry have a real economic motive to behave &lsquo;responsibly&rsquo;? A critical investigation of the motives for Corporate Social Responsibility according to CSR professionals</strong> (Baumberg)</p>
+                        <p>Rejected by <em>Social Science & Medicine</em> (after R&R, <time  class="date" date-time="2010" >2010</time>), before eventually becoming subsumed in <em>British Journal of Sociology</em></p>                    
+                    </div>
+                    <time  class="date" date-time="2016" >2016</time>
                 </div>
                 <div class="publication benefits"> <!-- paper seven -->
                     <div><p class="item-type paper">Paper</p></div>
-                    <div><p class="title-link" href=""><strong></strong></p>
-                        <p></p>                    
+                    <div><p class="title-link" href=""><strong>Convenient truths: An empirical investigation of moral perceptions of &lsquo;alcohol industry&rsquo; employees, and the implications for theories of moral decision-making</strong> (Baumberg)</p>
+                        <p>Rejected by <em>Journal of Business Ethics</em> (<time  class="date" date-time="2009" >2009</time>)</p>                    
                     </div>
                     <p>unpublished</p>
                 </div>
                 <div class="publication benefits"> <!-- paper eight -->
                     <div><p class="item-type paper">Paper</p></div>
-                    <div><p class="title-link" href=""><strong></strong></p>
-                        <p></p>
+                    <div><p class="title-link" href=""><strong>Contradictions in the desire to work past pension age: &lsquo;Third Age work&rsquo;, flexibility, and the later working agenda</strong> (Baumberg)</p>
+                        <p>Rejected by <em>Social Policy & Administration</em> (<time  class="date" date-time="2008" >2008</time>)</p>
                 </div>
                     <p>unpublished</p>
                 </div>
                 <div class="publication benefits"> <!-- paper nine -->
                     <div><p class="item-type paper">Paper</p></div>
-                    <div><p class="title-link" href=""><strong></strong></p>
-                        <p></p>                    
+                    <div><p class="title-link" href=""><strong>Alcohol in the economy: The costs and benefits of alcohol and the alcohol trade</strong> (Baumberg & Anderson)</p>
+                        <p>Rejected by a Special Issue of <em>Addiction</em> (<time  class="date" date-time="2007" >2007</time>)</p>                    
                     </div>
                     <p>unpublished</p>
                 </div>
-            </section>
+
+                <div class="publication benefits"> <!-- paper nine -->
+                    <div><p class="item-type other">Funding</p></div>
+                <div>
+                    <h3>There are also funding bids that have been rejected:</h3> 
+                    <ul>
+                        <li>An ESRC/MRC Post-Doc Fellowship (<time  class="date" date-time="2009" >2009</time>)</li>
+                    </ul>
+                    <p>and various bids that I was a part of but didn't lead on, including:</p> 
+                        <ul>
+                             <li><time  class="date" date-time="2010" >2010</time> (parts of which were funded in the broader ESRC/MRC project led by Sarah Vickerstaff <time  class="date" date-time="2014" >2014</time>&mdash;<time  class="date" date-time="2016" >2016</time></li>
+                             <li><time  class="date" date-time="2013" >2013</time>, for an ESRC Centre for Research on Social Security (led by Prof Karen Rowlingson, which was shortlisted but ultimately not funded</li>
+                            <li><time  class="date" date-time="2018" >2018</time>, for a UK Prevention Research Partnership for Welfare, Mental Health and Wellbeing (led by Prof Clare Bambra)</li> 
+                            <li><time  class="date" date-time="2019" >2019</time>, for an international project on intellectual humility (led by Prof Nancy Cartwright, to the John Templeton Foundation)</li>
+                            <li><time  class="date" date-time="2020" >2020</time>, an international comparison of inequalities during/after the COVID-19 pandemic (led by Prof Kjetil van der Wel; initially rejected by the Norwegian Research Council, but since resubmitted under another funding call, decision pending)</li>
+                        </ul>
+                    </div>
+                </section>
             
         </section> 
 
